--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ numpy==1.26.4
 pandas==2.2.2
 pillow==10.4.0
 opencv-python-headless==4.10.0.84
+requests==2.32.3
+folium==0.20.0
+streamlit-folium==0.25.0
+geopy==2.4.1
